code refactor, implement attachment service and controller endpoints, update mapper for tickets
